<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.screen.LoginFragment">
  
  <TextView
    android:id="@+id/tv_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_text"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.2" />
  
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_login_username_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    app:boxCornerRadiusBottomEnd="8dp"
    app:boxCornerRadiusBottomStart="8dp"
    app:boxCornerRadiusTopEnd="8dp"
    app:boxCornerRadiusTopStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_login"
    app:layout_constraintVertical_bias="0.0">
    
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_login_username"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/username_text" />
  </com.google.android.material.textfield.TextInputLayout>
  
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_login_password_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:boxCornerRadiusBottomEnd="8dp"
    app:boxCornerRadiusBottomStart="8dp"
    app:boxCornerRadiusTopEnd="8dp"
    app:boxCornerRadiusTopStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/et_login_username_field"
    app:layout_constraintStart_toStartOf="@+id/et_login_username_field"
    app:layout_constraintTop_toBottomOf="@+id/et_login_username_field"
    app:layout_constraintVertical_bias="0.0">
    
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_login_password"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/password_text"
      android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>
  
  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_login_submit"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/login_text"
    app:boxCornerRadiusBottomEnd="8dp"
    app:boxCornerRadiusBottomStart="8dp"
    app:boxCornerRadiusTopEnd="8dp"
    app:boxCornerRadiusTopStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/et_login_password_field"
    app:layout_constraintStart_toStartOf="@+id/et_login_password_field"
    app:layout_constraintTop_toBottomOf="@+id/et_login_password_field"
    app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
